# ArbinInsight_Client

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  udp-bridge.js  vite.config.js  vite.config.ts
src/: App.tsx  main.tsx  styles.css  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppSidebar.tsx  DetailSidebar.tsx  LineChart.tsx  LoginPage.tsx  Logo_animation.tsx  MachineDetailPanel.tsx  MachineDetailsPage.tsx  MachineGrid.tsx  MetricStrip.tsx  PressableIconButton.tsx  StatusDistributionCard.tsx  SummaryPanel.tsx  TopBar.tsx  UserProfileMenu.tsx
src/components/dashboard/: DashboardShared.tsx  ExecutiveSummaryPage.tsx  MachineStatusPage.tsx
src/data/: dashboardData.ts
src/hooks/: useDashboard.ts  useMachines.ts  useUdpBridge.ts
src/models/: api.ts  bridge.ts  dashboard.ts  machine.ts
src/services/: dashboardService.ts  machineService.ts  udpBridge.ts
