[package]
name = "arbin_insight_client"
version = "0.1.0"
description = "ArbinInsight Client app"
authors = ["Arbin Instrument"]
edition = "2021"

[lib]
name = "arbin_insight_client"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
